# src/docs/swagger.yaml
@@ -23,31 +23,72 @@ definitions:
       message:
         type: string
     type: object
-  models.Booking:
-    properties:
-      SVCPID:
-        type: string
-      bookingStatus:
-        $ref: '#/definitions/models.BookingStatus'
-      bookingTimestamp:
-        type: string
-      feedback:
-        $ref: '#/definitions/models.Feedback'
-      serviceID:
-        type: string
-      timeslotID:
-        type: string
-      totalBookingPrice:
-        type: number
-      userID:
-        type: string
-    type: object
   models.BookingBasicRes:
     properties:
       message:
         type: string
       result:
-        $ref: '#/definitions/models.Booking'
+        $ref: '#/definitions/models.BookingFullNoID'
+    type: object
+  models.BookingFullNoID:
+    properties:
+      SVCPID:
+        type: string
+      SVCPName:
+        type: string
+      averageRating:
+        type: number
+      bookingTimestamp:
+        type: string
+      cancelBy:
+        description: who cancelled
+        type: string
+      cancelReason:
+        description: reason for cancellation
+        type: string
+      cancelStatus:
+        description: true if cancelled
+        type: boolean
+      cancelTimestamp:
+        description: time of cancellation
+        type: string
+      endTime:
+        type: string
+      feedback:
+        $ref: '#/definitions/models.Feedback'
+      paymentStatus:
+        type: boolean
+      paymentTimestamp:
+        type: string
+      rescheduleStatus:
+        description: true if rescheduled
+        type: boolean
+      serviceDescription:
+        type: string
+      serviceID:
+        type: string
+      serviceImg:
+        type: string
+      startTime:
+        type: string
+      svcpCompleted:
+        type: boolean
+      svcpCompletedTimestamp:
+        type: string
+      svcpConfirmed:
+        type: boolean
+      svcpConfirmedTimestamp:
+        type: string
+      timeslotID:
+        type: string
+      totalBookingPrice:
+        type: number
+      userCompleted:
+        type: boolean
+      userCompletedTimestamp:
+        type: string
+      userID:
+        type: string
     type: object
   models.BookingRequest:
     properties:
@@ -58,53 +99,43 @@ definitions:
       timeslotID:
         type: string
     type: object
-  models.BookingStatus:
-    enum:
-    - pending payment
-    - payment paid
-    - service provided comfirmed
-    - completed
-    - cancelled by user
-    - cancelled by service provider
-    - expired from unpaid
-    - expired from pending service provider confirmation
-    type: string
-    x-enum-comments:
-      BookingCanceledSvcp: svcp has cancelled
-      BookingCanceledUser: user has cancelled
-      BookingComfirmed: svcp has confirmed waiting for user to pay
-      BookingCompleted: service has been provided
-      BookingExpiredComfirmed: svcp has not confirmed in time
-      BookingExpiredPaid: user has not paid in time
-      BookingPaid: user has paid
-      BookingPending: waiting for user to pay
-    x-enum-varnames:
-    - BookingPending
-    - BookingPaid
-    - BookingComfirmed
-    - BookingCompleted
-    - BookingCanceledUser
-    - BookingCanceledSvcp
-    - BookingExpiredPaid
-    - BookingExpiredComfirmed
-  models.BookingWithId:
+  models.BookingShowALL:
     properties:
       SVCPID:
         type: string
+      SVCPName:
+        type: string
       bookingID:
         type: string
-      bookingStatus:
-        $ref: '#/definitions/models.BookingStatus'
       bookingTimestamp:
         type: string
-      feedback:
-        $ref: '#/definitions/models.Feedback'
+      cancelStatus:
+        description: true if cancelled
+        type: boolean
+      endTime:
+        type: string
+      paymentStatus:
+        description: true if paid
+        type: boolean
       serviceID:
         type: string
+      serviceName:
+        type: string
+      startTime:
+        type: string
+      svcpCompleted:
+        description: true if completed by svcp
+        type: boolean
+      svcpConfirmed:
+        description: true if confirmed by svcp
+        type: boolean
       timeslotID:
         type: string
       totalBookingPrice:
         type: number
+      userCompleted:
+        description: true if completed by user
+        type: boolean
       userID:
         type: string
     type: object
@@ -114,7 +145,7 @@ definitions:
         type: string
       result:
         items:
-          $ref: '#/definitions/models.BookingWithId'
+          $ref: '#/definitions/models.BookingShowALL'
         type: array
     type: object
   models.CreateSVCP:
@@ -190,14 +221,20 @@ definitions:
     type: object
   models.RequestBookingAll:
     properties:
+      cancelStatus:
+        type: integer
+      paymentStatus:
+        type: integer
       reservationType:
         type: string
-      statusAllow:
-        items:
-          $ref: '#/definitions/models.BookingStatus'
-        type: array
-      timeslotStartBefore:
+      startAfter:
         type: string
+      svcpCompleted:
+        type: integer
+      svcpConfirmed:
+        type: integer
+      userCompleted:
+        type: integer
     type: object
   models.RequestBookingId:
     properties:
@@ -530,15 +567,16 @@ paths:
       consumes:
       - application/json
       description: |-
-        body not required if you dont want to filter(get all)
-        option body to filter booking by timeslotStartBefore,statusAllow,reservationType.
-        waring if you use fillter some booking with worng(not found,deleted etc) svcpid ,serviceid ,timeslotid will skip if you want to get all dont use filter
-        timeslotStartBefore is filter booking that has timeslot Start Before this time
-        statusAllow array filter by array of status  (string status)
-        reservationType is booking is "incoming" or "outgoing"
-        filter is and condition
+        json body not required if you dont want to filter result
+        startAfter is filter booking that has timeslot Start Before this time
+        reservationType is checking booking is "incoming" or "outgoing"
+        cancelStatus ,paymentStatus ,svcpConfirmed ,svcpCompleted ,userCompleted is filter booking with status 0 == false, 1 == true, 2 == dont care(or you can unuse this filed in json body)
+        if dont want to filter that field dont use that field in json body
+        filter is and-condition(&&)
+        example {}
+        example {"reservationType":"incoming","svcpCompleted": 1,"userCompleted": 0}
       parameters:
-      - description: get all booking after this timeslot
+      - description: get all booking with filter(optional)
         in: body
         name: service
         schema:
@@ -699,10 +737,6 @@ paths:
             items:
               $ref: '#/definitions/models.Feedback'
             type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.BasicErrorRes'
         "500":
           description: Internal Server Error
           schema:
@@ -741,6 +775,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.BasicErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Create a feedback
       tags:
       - Service
